<resources>
    <string name="app_name">Hifz Companion</string>
    <string name="form_email">Email address</string>
    <string name="form_password">Password</string>
    <string name="btn_logIn">Log in</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="textBtnRegister">Don\'t have an account? Register</string>
    <string name="textBtnSignIn">Already have an account? Sign In</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="app_email">hifzulquran@gmail.com</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="again">again</string>
    <string name="hard">hard</string>
    <string name="good">good</string>
    <string name="easy">easy</string>
    <string name="no_page_due_for_memorizing_text">You have no pages due for Memorizing</string>
    <string name="no_page_due_for_revision_text">You have no pages due for Revision</string>
    <string name="no_ongoing_plan_create_plan">"You have no ongoing memorization plan. Create a Plan to see pages"</string>
    <string name="hifz_plan_created_snackbar_text">Your hifz plan has been created. Your first page will appear tomorrow in shaa Allah</string>
    <string name="delete_plan_dialog_message">Are you sure you want to delete the current plan. You will not see any more of your memorization pages and you will not be given any pages to review. If you still want to proceed, type \"delete\" in the text area below and click on \"DELETE PLAN\".</string>
    <string name="help_text_view_text">I am writing an app using firebase as a backend, and I am trying to write to the database, but am getting \"Error 7: Missing or insufficient permissions.\" Someone told me cloud functions bypasses the firebase permissions, so I\'m not sure what could be causing this error. Can someone please take a look?I am writing an app using firebase as a backend, and I am trying to write to the database, but am getting \"Error 7: Missing or insufficient permissions.\" Someone told me cloud functions bypasses the firebase permissions, so I\'m not sure what could be causing this error. Can someone please take a look?I am writing an app using firebase as a backend, and I am trying to write to the database, but am getting \"Error 7: Missing or insufficient permissions.\" Someone told me cloud functions bypasses the firebase permissions, so I\'m not sure what could be causing this error. Can someone please take a look?</string>

    <string-array name="quran_plans">
        <item>Choose Plan</item>
        <item>Memorize in 1 year</item>
        <item>Memorize in 2 years</item>
        <item>Memorize in 3 years</item>
        <item>Memorize in 4 years</item>
        <item>Memorize in 5 years</item>
        <item>Memorize in 6 years</item>
    </string-array>

    <string-array name="juzs">
        <item>Choose Juz</item>
        <item>Juz 1</item>
        <item>Juz 2</item>
        <item>Juz 3</item>
        <item>Juz 4</item>
        <item>Juz 5</item>
        <item>Juz 6</item>
        <item>Juz 7</item>
        <item>Juz 8</item>
        <item>Juz 9</item>
        <item>Juz 10</item>
        <item>Juz 11</item>
        <item>Juz 12</item>
        <item>Juz 13</item>
        <item>Juz 14</item>
        <item>Juz 15</item>
        <item>Juz 16</item>
        <item>Juz 17</item>
        <item>Juz 18</item>
        <item>Juz 19</item>
        <item>Juz 20</item>
        <item>Juz 21</item>
        <item>Juz 22</item>
        <item>Juz 23</item>
        <item>Juz 24</item>
        <item>Juz 25</item>
        <item>Juz 26</item>
        <item>Juz 27</item>
        <item>Juz 28</item>
        <item>Juz 29</item>
        <item>Juz 30</item>
    </string-array>

    <string-array name="juz_plans">
        <item>Choose Plan</item>
        <item>Memorize in 2 weeks</item>
        <item>Memorize in 3 weeks</item>
        <item>Memorize in 5 weeks</item>
        <item>Memorize in 6 weeks</item>
        <item>Memorize in 7 weeks</item>
        <item>Memorize in 9 weeks</item>
    </string-array>

    <string-array name="surah_plans">
        <item>Choose Plan</item>
        <item>Memorize 2 pages per day</item>
        <item>Memorize 1 page per day</item>
        <item>Memorize 1 page in 2 days</item>
        <item>Memorize 1 pages per 3 days</item>
    </string-array>
</resources>