<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInEmailtextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/form_email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInPasswordtextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/form_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/signInEmailtextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/signInEmailtextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/signInEmailtextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_logIn"
            app:layout_constraintEnd_toEndOf="@+id/signInPasswordtextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/signInPasswordtextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/signInPasswordtextInputLayout"
            tools:layout_editor_absoluteY="316dp" />

        <TextView
            android:id="@+id/textViewResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/reset_password"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textBtnRegister"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/textViewResetPassword"
            app:layout_constraintStart_toStartOf="@+id/textViewResetPassword"
            app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="@+id/textView_register"
            app:layout_constraintStart_toStartOf="@+id/textView_register"
            app:layout_constraintTop_toBottomOf="@+id/textView_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>