<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpEmailtextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/form_email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpPasswordtextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/form_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/signUpEmailtextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/signUpEmailtextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmailtextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpConfirmPasswordtextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/form_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/signUpPasswordtextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/signUpPasswordtextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/signUpPasswordtextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpConfirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_signUp"
            app:layout_constraintEnd_toEndOf="@+id/signUpConfirmPasswordtextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/signUpConfirmPasswordtextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPasswordtextInputLayout" />


        <TextView
            android:id="@+id/textView_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textBtnSignIn"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/signUpButton"
            app:layout_constraintStart_toStartOf="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <View
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="@+id/textView_signIn"
            app:layout_constraintStart_toStartOf="@+id/textView_signIn"
            app:layout_constraintTop_toBottomOf="@+id/textView_signIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>