<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/due_for_revision_card_quran_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="Quran Page:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/due_for_revision_card_surah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Surah: 1. Fatihah"
                app:layout_constraintEnd_toEndOf="@id/due_for_revision_card_quran_page"
                app:layout_constraintStart_toStartOf="@id/due_for_revision_card_quran_page"
                app:layout_constraintTop_toBottomOf="@id/due_for_revision_card_quran_page" />

            <TextView
                android:id="@+id/due_for_revision_card_first_ayah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="1st Ayah: 1"
                app:layout_constraintEnd_toEndOf="@id/due_for_revision_card_surah"
                app:layout_constraintStart_toStartOf="@id/due_for_revision_card_surah"
                app:layout_constraintTop_toBottomOf="@id/due_for_revision_card_surah" />


            <Button
                android:id="@+id/again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/again"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darker_white"
                app:layout_constraintEnd_toStartOf="@id/hard_button"
                app:layout_constraintStart_toStartOf="@id/due_for_revision_card_first_ayah"
                app:layout_constraintTop_toBottomOf="@id/due_for_revision_card_first_ayah" />

            <Button
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/hard"
                android:textColor="@color/deepYellow"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darker_white"
                app:layout_constraintEnd_toEndOf="@id/due_for_revision_card_first_ayah"
                app:layout_constraintStart_toEndOf="@id/again_button"
                app:layout_constraintTop_toBottomOf="@id/due_for_revision_card_first_ayah" />

            <Button
                android:id="@+id/good_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/good"
                android:textColor="@color/purple_700"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darker_white"
                app:layout_constraintEnd_toStartOf="@id/easy_button"
                app:layout_constraintStart_toStartOf="@id/again_button"
                app:layout_constraintTop_toBottomOf="@id/again_button" />

            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/easy"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/darker_white"
                app:layout_constraintEnd_toEndOf="@id/hard_button"
                app:layout_constraintStart_toEndOf="@id/good_button"
                app:layout_constraintTop_toBottomOf="@id/hard_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>